2007-12-16  Joel Brobecker  <brobecker@adacore.com>

	* expression.h (parse_expression_in_context): Delete prototype.
	* parse.c (parse_expression_in_context): Delete.

2007-12-14  Vladimir Prus  <vladimir@codesourcery.com>

	Add support for pending breakpoints in MI.
	* gdb.h (gdb_breakpoint): Add parameter pending.
	* breakpoint.c (gdb_breakpoint): Add parameter pending.
	* mi/mi-cmd-break.c (mi_break_insert): Change
	comment to refer to manual.  Add support for
	the -f flag, for pending breakpoint.

2007-12-14  Vladimir Prus  <vladimir@codesourcery.com>
	
	* breakpoint.c (break_command_really): New, copied
	from break_command_1. New parameters COND_STRING, THREAD
	PARSE_CONDITITION_AND_THREAD and PENDING_BREAK_SUPPORT.
	The previous FLAG parameter split into TEMPFLAG and
	HARDWAREFLAG.
	When PARSE_CONDITION_AND_THREAD is not set, duplicate
	the passed condition string.
	(struct captured_breakpoint_args): Remove
	(do_captured_breakpoint): Remove.
	(break_command_1): Relay to break_command_really.
	(gdb_breakpoint): Relay to break_command_really.
	
2007-12-13  Michael Snyder  <msnyder@specifix.com>

	* mips-linux-tdep.c (mips64_fill_gregset): Remove unused variable.

2007-12-13  Jim Blandy  <jimb@codesourcery.com>

	* dwarf2read.c (attr_form_is_constant): New function.
	(dwarf2_add_field): Use it and attr_form_is_section_offset to
	recognize DW_AT_data_member_location attributes.  Use
	dwarf2_get_attr_constant_value when the attribute is a constant.

	* dwarf2read.c (attr_form_is_section_offset): New function.
	(dwarf_add_member_fn, read_common_block, read_partial_die)
	(dwarf2_symbol_mark_computed): Use it, instead of writing it out.

2007-12-12  Jim Blandy  <jimb@codesourcery.com>

	Remove unused support for target-based exception catching.
	* target.h (struct target_ops): Delete
	to_enable_exception_callback and to_get_current_exception_event
	members.
	(target_enable_exception_callback)
	(target_get_current_exception_event): Delete macros.